--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -33,13 +33,13 @@ jobs:
             if ${{ github.event_name == 'pull_request' }}
             then
               echo "::set-env name=title::Test Run for PR #${{steps.PRNUMBER.outputs.pr}} (${{github.run_number}})"
-              echo "::set-env name=file_name::TestReport.${{steps.PRNUMBER.outputs.pr}}.${{github.run_number}}.md"
+              echo "::set-env name=file_name::TestReport.${{steps.PRNUMBER.outputs.pr}}.${{github.run_number}}.trx"
             else
               echo "::set-env name=title::Test Run ${{github.run_number}}"
-              echo "::set-env name=file_name::TestReport.${{github.run_number}}.md"
+              echo "::set-env name=file_name::TestReport.${{github.run_number}}.trx"
             fi
     - name: Test
-      run: dotnet test --no-restore --verbosity normal --configuration $config --logger:"liquid.md;LogFileName=${{github.workspace}}/${{env.file_name}};Title=${{env.title}};"
+      run: dotnet test --no-restore --verbosity normal --configuration $config --logger:"trx;LogFileName=${{github.workspace}}/${{env.file_name}};Title=${{env.title}};"
     # upload report as build artifact
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2
