--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,5 +22,5 @@ steps:
 
 - task: DotNetCoreCLI@2
   inputs:
-    command: 'test'
+    command: 'test --collect "Code coverage"'
     projects: '**/*.csproj'
