Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,5 +22,6 @@ steps:
 
 - task: DotNetCoreCLI@2
   inputs:
-    command: 'test --collect "Code coverage"'
+    command: 'test'
+    arguments: '--collect "Code Coverage"'
     projects: '**/*.csproj'
