--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,6 +33,4 @@ steps:
     arguments: '--collect "Code Coverage"'
     projects: '**/*.csproj'
 
-- task: SonarCloudPublish@1
-  inputs:
-    pollingTimeoutSec: '300'
+- task: SonarCloudAnalyze@1
