Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,4 +34,6 @@ steps:
     projects: '**/*.csproj'
 
 - task: SonarCloudAnalyze@1
+  inputs:
+    projectKey: 'thomas-hayden_test'
 - task: SonarCloudPublish@1
