Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,16 +16,24 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+- task: DotNetCoreCLI@2
+  displayName: 'Restore solution'
+  inputs:
+    command: 'restore'
+    projects: '**/*.sln'
+    feedsToUse: 'select'
+
 - task: SonarCloudPrepare@1
   inputs:
-    SonarCloud: 'sonarcloud'
+    SonarCloud: 'SC'
     organization: 'thomas-hayden'
-    scannerMode: 'MsBuild'
+    scannerMode: 'MSBuild'
     projectKey: 'thomas-hayden_test'
     projectName: 'test'
 - task: DotNetCoreCLI@2
   inputs:
     command: 'build'
+    projects: '**/*.sln'
 
 - task: DotNetCoreCLI@2
   inputs:
@@ -34,6 +42,8 @@ steps:
     projects: '**/*.csproj'
 
 - task: SonarCloudAnalyze@1
-  inputs:
-    projectKey: 'thomas-hayden_test'
+
 - task: SonarCloudPublish@1
+  displayName: 'Publish results on build summary'
+  inputs:
+    pollingTimeoutSec: '300'
