--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
 
 - task: SonarCloudPrepare@1
   inputs:
-    SonarCloud: 'SC'
+    SonarCloud: 'sonarcloud'
     organization: 'thomas-hayden'
     scannerMode: 'MSBuild'
     projectKey: 'thomas-hayden_test'
