--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -17,6 +17,11 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.301
+    - name: Install sonarscanner
+      run: |
+            dotnet tool install --global dotnet-sonarscanner --version 4.9.0
+            dotnet tool install --global coverlet.console
+            dotnet sonarscanner begin /k:"thomas-hayden_test" /o:"thomas-hayden" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login=${{ secrets.SONAR_TOKEN }}
     - name: Install dependencies
       run: dotnet restore
     - name: Build
@@ -39,7 +44,9 @@ jobs:
               echo "::set-env name=file_name::TestReport.${{github.run_number}}.md"
             fi
     - name: Test
-      run: dotnet test --no-restore --verbosity normal --configuration Release --logger:"liquid.md;LogFileName=${{github.workspace}}/${{env.file_name}};Title=${{env.title}};"
+      run: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
+    - name: End SonarScanner
+      run: dotnet sonarscanner end /d:sonar.login=${{ secrets.SONAR_TOKEN }}
     # upload report as build artifact
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2
