--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -20,12 +20,12 @@ jobs:
     - name: Install dependencies
       run: dotnet restore
     - name: Test
-      run: dotnet test --collect:"Code Coverage" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput="TestResults\coverage.opencover.xml"
+      run: dotnet test WebApplication2.sln --collect:"Code Coverage" /p:CollectCoverage=true /p:CoverletOutput=../CoverageResults/ /p:MergeWith="../CoverageResults/coverage.json" /p:CoverletOutputFormat="opencover"
     - name: Install sonarscanner
       run: |
             dotnet tool install --global dotnet-sonarscanner --version 4.9.0
             dotnet tool install --global coverlet.console
-            dotnet sonarscanner begin /k:"thomas-hayden_test" /o:"thomas-hayden" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login=${{ secrets.SONAR_TOKEN }} /d:sonar.cs.opencover.reportsPaths="TestResults\coverage.opencover.xml"
+            dotnet sonarscanner begin /k:"thomas-hayden_test" /o:"thomas-hayden" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login=${{ secrets.SONAR_TOKEN }} /d:sonar.cs.opencover.reportsPaths="CoverageResults/coverage.json"
     - name: Build
       run: dotnet build --configuration Release --no-restore
     - name: End SonarScanner
