--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -23,7 +23,14 @@ jobs:
       run: |
             dotnet tool install --global dotnet-sonarscanner --version 4.9.0
             dotnet tool install --global coverlet.console
-            dotnet sonarscanner begin /k:"thomas-hayden_test" /o:"thomas-hayden" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login=${{ secrets.SONAR_TOKEN }} /d:sonar.cs.opencover.reportsPaths="*/coverage.opencover.xml"
+            dotnet sonarscanner begin /k:"thomas-hayden_test" /o:"thomas-hayden" /d:sonar.host.url="https://sonarcloud.io"
+            -/d:sonar.login=${{ secrets.SONAR_TOKEN }}
+            -/d:sonar.cs.opencover.reportsPaths="*/coverage.opencover.xml"
+            -/d:sonar.pullrequest.key=${{ github.event.number }}
+            -/d:sonar.pullrequest.branch=${{ github.HEAD_REF }}
+            -/d:sonar.pullrequest.base=${{ github.BASE_REF }}
+            -/d:sonar.pullrequest.github.repository=${{ github.repository }}
+            -/d:sonar.scm.provider=git
     - name: Test
       run: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=coverage
     - name: End SonarScanner
