--- a/.github/workflows/dotnet-core-push.yml
+++ b/.github/workflows/dotnet-core-push.yml
@@ -1,9 +1,7 @@
-name: .NET Core
+name: .NET Core Push
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
     branches: [ master ]
 
 jobs:
@@ -21,9 +19,9 @@ jobs:
       run: dotnet restore
     - name: Install sonarscanner
       run: |
-            dotnet tool install --global dotnet-sonarscanner --version 4.9.0
+            dotnet tool install --global dotnet-sonarscanner
             dotnet tool install --global coverlet.console
-            dotnet sonarscanner begin /k:"thomas-hayden_test" /o:"thomas-hayden" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login=${{ secrets.SONAR_TOKEN }} /d:sonar.cs.opencover.reportsPaths="*/coverage.opencover.xml" /d:sonar.pullrequest.key=${{ github.event.number }} /d:sonar.pullrequest.branch=${{ github.HEAD_REF }} /d:sonar.pullrequest.base=${{ github.BASE_REF }} /d:sonar.pullrequest.github.repository=${{ github.repository }} /d:sonar.scm.provider=git
+            dotnet sonarscanner begin /k:"thomas-hayden_test" /o:"thomas-hayden" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login=${{ secrets.SONAR_TOKEN }} /d:sonar.cs.opencover.reportsPaths="*/coverage.opencover.xml" /d:sonar.scm.provider=git /d:sonar.branch.name="${GITHUB_REF:11}"
     - name: Test
       run: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=coverage
     - name: End SonarScanner
