Update and rename dotnet-core-push.yml to dotnet-core-pull.yml

--- a/.github/workflows/dotnet-core-pull.yml
+++ b/.github/workflows/dotnet-core-pull.yml
@@ -1,7 +1,7 @@
-name: .NET Core Push
+name: .NET Core Pull
 
 on:
-  push:
+  pull_request:
     branches: [ master ]
 
 jobs:
@@ -21,7 +21,7 @@ jobs:
       run: |
             dotnet tool install --global dotnet-sonarscanner
             dotnet tool install --global coverlet.console
-            dotnet sonarscanner begin /k:"thomas-hayden_test" /o:"thomas-hayden" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login=${{ secrets.SONAR_TOKEN }} /d:sonar.cs.opencover.reportsPaths="*/coverage.opencover.xml" /d:sonar.scm.provider=git /d:sonar.branch.name="${GITHUB_REF:11}"
+            dotnet sonarscanner begin /k:"thomas-hayden_test" /o:"thomas-hayden" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login=${{ secrets.SONAR_TOKEN }} /d:sonar.cs.opencover.reportsPaths="*/coverage.opencover.xml" /d:sonar.pullrequest.key=${{ github.event.number }} /d:sonar.pullrequest.branch=${{ github.HEAD_REF }} /d:sonar.pullrequest.base=${{ github.BASE_REF }} /d:sonar.pullrequest.github.repository=${{ github.repository }} /d:sonar.scm.provider=git
     - name: Test
       run: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=coverage
     - name: End SonarScanner
