--- a/.github/workflows/dotnet-core-push.yml
+++ b/.github/workflows/dotnet-core-push.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - name: 'Setup .NET Core ${{ github.REF:11 }} ${{GITHUB_REF}} ${GITHUB_REF:11}'
+    - name: 'Setup .NET Core ${{ github.REF }:11} ${{GITHUB_REF}} ${GITHUB_REF:11}'
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.301
