--- a/.github/workflows/dotnet-core-push.yml
+++ b/.github/workflows/dotnet-core-push.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         fetch-depth: 0
     - name: Blah
-      run: echo running on branch ${GITHUB_REF}
+      run: echo running on branch ${{ github.REF }} ${GITHUB_REF:11}
     - name: 'Setup .NET Core'
       uses: actions/setup-dotnet@v1
       with:
