--- a/.github/workflows/dotnet-core-push.yml
+++ b/.github/workflows/dotnet-core-push.yml
@@ -7,14 +7,14 @@ on:
 jobs:
   build:
 
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
     - name: Blah
-      run: echo $env:GITHUB_REF
+      run: echo ${GITHUB_REF}
     - name: 'Setup .NET Core'
       uses: actions/setup-dotnet@v1
       with:
