--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,3 +47,10 @@ steps:
   displayName: 'Publish results on build summary'
   inputs:
     pollingTimeoutSec: '300'
+
+- task: puma-scan-pro-build-task@1
+  inputs:
+    projectPath: 'WebApplication2.sln'
+    scanResultsFormat: 'json'
+    outputFilename: 'PumaScanResults'
+    verboseMode: true
