Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,14 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+
+- task: puma-scan-pro-build-task@1
+  inputs:
+    projectPath: 'WebApplication2.sln'
+    scanResultsFormat: 'sonarcloud'
+    outputFilename: 'PumaScanResults'
+    verboseMode: true
+
 - task: DotNetCoreCLI@2
   displayName: 'Restore solution'
   inputs:
@@ -47,10 +55,3 @@ steps:
   displayName: 'Publish results on build summary'
   inputs:
     pollingTimeoutSec: '300'
-
-- task: puma-scan-pro-build-task@1
-  inputs:
-    projectPath: 'WebApplication2.sln'
-    scanResultsFormat: 'json'
-    outputFilename: 'PumaScanResults'
-    verboseMode: true
