Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,4 +33,4 @@ steps:
   inputs:
     gitHubConnection: 'thomas-hayden'
     repositoryName: '$(Build.Repository.Name)'
-    comment: '$(Test)'
+    comment: 'Test'
